Fix the shared library issue while buildling with ninja. Enable the demo build by default. Add the gpds under the qschematic module

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -23,7 +23,7 @@ set(RESOURCES
 
 # Define a target name
 set(TARGET qschematic-demo)
-
+message("hahahahahahah")
 # Create executable
 add_executable(${TARGET})
 
